refactor: merge students list and search endpoints
